Fixed styling contrast problem

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    filter: contrast(200%);
 }
 
 h1 {
@@ -48,7 +49,4 @@ button {
     font-size: 1rem;
     padding: 1rem 2rem;
     text-align: center;
-    position: static;
-    flex-grow: 0;
-
 }
